kubernetes/k8s-deployment.yaml
###################################
# medpet-chatbot-service
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medpet-chatbot-service
  labels:
    app: medpet-chatbot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medpet-chatbot-service
  template:
    metadata:
      labels:
        app: medpet-chatbot-service
    spec:
      containers:
        - name: medpet-chatbot-service
          image: caprilespe/medpet-chatbot-service:3.0.0 
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1024m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: medpet-chatbot-service
spec:
  type: LoadBalancer
  selector:
    app: medpet-chatbot-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
